--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
     <title>Primer despliegue</title>
 </head>
 <body>
-    <h1>Hola Informatorio ! :grinning:
+    <h1>Hola Informatorio  🤐
     </h1>
 </body>
 </html>
